guestbook/podinfo-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: podinfo-ui
  template:
    metadata:
      labels:
        app: podinfo-ui
    spec:
      containers:
        - image: ghcr.io/stefanprodan/podinfo:6.6.0
          name: guestbook-ui
          ports:
            - containerPort: 9898
