guestbook/podinfo-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-ui
spec:
  ports:
  - port: 80
    targetPort: 9898
  selector:
    app: podinfo-ui
