guestbook/podinfo-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: podinfo-ui
  namespace: guestbook
spec:
  to:
    kind: Service
    name:  guestbook-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
